--- a/01_Fundamentals/eindopdracht/eindopdracht-lex/scss/components/_footer.scss
+++ b/01_Fundamentals/eindopdracht/eindopdracht-lex/scss/components/_footer.scss
@@ -5,7 +5,7 @@ footer {
 
   .footer-mobile {
     width: 95%;
-    padding: 10px 30px 100px 30px;
+    padding: 10px 30px 70px 30px;
 
     ul li i:before,
     ul li i:after,
@@ -47,22 +47,6 @@ footer {
       padding-top: 30px;
       padding-bottom: 10px;
       border-bottom: 1px solid rgb(210, 209, 209);
-    }
-
-    ul li:nth-of-type(1) {
-      animation-delay: 0.5s;
-    }
-
-    ul li:nth-of-type(2) {
-      animation-delay: 0.75s;
-    }
-
-    ul li:nth-of-type(3) {
-      animation-delay: 1s;
-    }
-
-    ul li:last-of-type {
-      padding-bottom: 0;
     }
 
     ul li i {
